Minor spacing fix

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ p {
 
 .durham {
     margin-left: 15px;
-    margin-right: 15px;
+    margin-right: 12px;
 }
 
 .voluntech {
@@ -29,7 +29,7 @@ p {
 }
 
 .droppr {
-    margin-right: 11px;
+    margin-right: 10px;
 }
 
 .text {
